cmake_minimum_required(VERSION 3.26)
project(iouring_event_loop)

set(CMAKE_CXX_STANDARD 20)

##############################################################################################################
# Options
##############################################################################################################

##############################################################################################################
# Targets
##############################################################################################################

add_subdirectory(src)

add_executable(iouring_event_loop ${SOURCES} src/main.cpp)

##############################################################################################################
# Dependencies
##############################################################################################################

include(FetchContent)

FetchContent_Declare(
    fmt
    URL      https://github.com/fmtlib/fmt/releases/download/10.1.1/fmt-10.1.1.zip
    URL_HASH SHA256=b84e58a310c9b50196cda48d5678d5fa0849bca19e5fdba6b684f0ee93ed9d1b
)

FetchContent_MakeAvailable(fmt)

add_dependencies(iouring_event_loop fmt)

##############################################################################################################
# Linking
##############################################################################################################

target_link_libraries(iouring_event_loop PRIVATE fmt)
target_link_libraries(iouring_event_loop PRIVATE uring)


##############################################################################################################
# Include dirs
##############################################################################################################
